--- a/semester6/Computational.html
+++ b/semester6/Computational.html
@@ -105,5 +105,43 @@
           </ul>
           <p>Soft computing relies on interdisciplinary approaches, integrating methodologies like fuzzy logic, neural networks, and genetic algorithms to simulate human intelligence. These methods empower machines to work in uncertain and imprecise environments effectively.</p>
       </ans>
+
+      <mark><que>2. What are the Differences Between Soft and Hard Computing?</que></mark>
+    <ans>
+        <p>The following table outlines the major differences between soft computing and hard computing:</p>
+        <table border="1">
+            <tr>
+                <th>Feature</th>
+                <th>Soft Computing</th>
+                <th>Hard Computing</th>
+            </tr>
+            <tr>
+                <td>Precision</td>
+                <td>Relies on approximate and probabilistic solutions.</td>
+                <td>Requires exact and deterministic solutions.</td>
+            </tr>
+            <tr>
+                <td>Nature</td>
+                <td>Flexible, adaptable, and human-like reasoning.</td>
+                <td>Rigid, rule-based, and algorithmic.</td>
+            </tr>
+            <tr>
+                <td>Error Tolerance</td>
+                <td>High tolerance for errors and noise.</td>
+                <td>Low tolerance for errors.</td>
+            </tr>
+            <tr>
+                <td>Application Areas</td>
+                <td>Complex, real-world problems like image processing.</td>
+                <td>Mathematical problems like arithmetic.</td>
+            </tr>
+            <tr>
+                <td>Examples</td>
+                <td>Neural networks, fuzzy logic, genetic algorithms.</td>
+                <td>Traditional algorithms, numeric computing.</td>
+            </tr>
+        </table>
+        <p>While soft computing thrives in scenarios requiring approximate solutions, hard computing is indispensable for tasks demanding absolute precision, such as banking systems or scientific calculations.</p>
+    </ans>
         </body>
 </html>
