--- a/semester6/Computational.html
+++ b/semester6/Computational.html
@@ -143,5 +143,25 @@
         </table>
         <p>While soft computing thrives in scenarios requiring approximate solutions, hard computing is indispensable for tasks demanding absolute precision, such as banking systems or scientific calculations.</p>
     </ans>
+
+    <mark><que>3. What are the Components of Soft Computing?</que></mark>
+    <ans>
+        <p>Soft computing integrates various methodologies, including Artificial Intelligence (AI), Neural Networks, Fuzzy Logic, and Genetic Algorithms. Each component is described below:</p>
+
+        <!-- Artificial Intelligence -->
+        <mark><que>3.1 What is Artificial Intelligence?</que></mark>
+        <ans>
+            <p>Artificial Intelligence (AI) refers to the simulation of human intelligence by machines. It enables computers to perform tasks that typically require human cognition, such as learning, reasoning, and problem-solving.</p>
+            <ul>
+                <li><b>Key Features:</b></li>
+                <ul>
+                    <li><b>Learning:</b> AI systems improve performance over time through training data.</li>
+                    <li><b>Reasoning:</b> Capable of making decisions based on logical inference.</li>
+                    <li><b>Adaptability:</b> Handles dynamic and unpredictable environments.</li>
+                </ul>
+                <li><b>Applications:</b> Autonomous vehicles, natural language processing, robotics, and automation.</li>
+            </ul>
+            <p>Modern AI integrates technologies such as deep learning and reinforcement learning to address more intricate challenges like gaming strategy or drug discovery.</p>
+        </ans>
         </body>
 </html>
