--- a/semester6/Computational.html
+++ b/semester6/Computational.html
@@ -163,5 +163,34 @@
             </ul>
             <p>Modern AI integrates technologies such as deep learning and reinforcement learning to address more intricate challenges like gaming strategy or drug discovery.</p>
         </ans>
+        <mark><que>3.2 What are Neural Networks?</que></mark>
+        <ans>
+            <p>A Neural Network is a computational model inspired by the structure of the human brain. It is composed of interconnected nodes (neurons) that process information in a layered architecture.</p>
+            <ul>
+                <li><b>Key Features:</b></li>
+                <ul>
+                    <li><b>Learning Process:</b> Neural networks use a technique called backpropagation to adjust weights and minimize error.</li>
+                    <li><b>Structure:</b> Includes input layers, hidden layers, and output layers.</li>
+                    <li><b>Adaptability:</b> Excels in tasks like image classification, speech recognition, and prediction.</li>
+                </ul>
+                <li><b>Applications:</b> Fraud detection, language translation, and autonomous systems.</li>
+            </ul>
+            <p>Advancements in neural networks, such as convolutional neural networks (CNNs) and recurrent neural networks (RNNs), have significantly boosted capabilities in image processing and sequential data handling, respectively.</p>
+        </ans>
+
+        <mark><que>3.3 What is Fuzzy Logic?</que></mark>
+        <ans>
+            <p>Fuzzy Logic is a mathematical framework for dealing with uncertainty and imprecision. Instead of binary true/false values, it uses degrees of truth, enabling more human-like reasoning.</p>
+            <ul>
+                <li><b>Key Features:</b></li>
+                <ul>
+                    <li>Fuzzy sets represent how much a value belongs to a set.</li>
+                    <li>Rule-based systems rely on "if-then" rules.</li>
+                    <li>Highly flexible and adaptable to vague information.</li>
+                </ul>
+                <li><b>Applications:</b> Washing machines, climate control systems, and decision-making systems.</li>
+            </ul>
+            <p>Fuzzy logic enhances decision-making in environments where binary decision-making fails to provide adequate flexibility.</p>
+        </ans>
         </body>
 </html>
