--- a/semester6/Computational.html
+++ b/semester6/Computational.html
@@ -192,5 +192,29 @@
             </ul>
             <p>Fuzzy logic enhances decision-making in environments where binary decision-making fails to provide adequate flexibility.</p>
         </ans>
+
+        <mark><que>3.4 What are Genetic Algorithms?</que></mark>
+        <ans>
+            <p>Genetic Algorithms are optimization techniques based on the principles of natural selection and evolution. They are used to find the best solution in large and complex search spaces.</p>
+            <ul>
+                <li><b>Key Features:</b></li>
+                <ul>
+                    <li>Encoded solutions are represented as chromosomes.</li>
+                    <li>A fitness function measures the quality of each solution.</li>
+                    <li>Genetic operators like selection, crossover, and mutation evolve better solutions.</li>
+                </ul>
+                <li><b>Steps:</b>
+                    <ol>
+                        <li>Generate an initial population.</li>
+                        <li>Evaluate fitness.</li>
+                        <li>Perform crossover and mutation.</li>
+                        <li>Repeat until an optimal solution is found.</li>
+                    </ol>
+                </li>
+                <li><b>Applications:</b> Scheduling problems, route optimization, and feature selection in machine learning.</li>
+            </ul>
+            <p>Through iterative evolution, genetic algorithms efficiently address problems with vast solution spaces that traditional methods struggle to optimize.</p>
+        </ans>
+    </ans>
         </body>
 </html>
