--- a/semester6/index.html
+++ b/semester6/index.html
@@ -144,6 +144,92 @@ function removememe() {
           <span><i class="fa fa-arrow-up" aria-hidden="true" id="arrow"></i></span>
       </a>
       </div> 
+
+      <h1>Classification of Digital Images</h1>
+
+      <mark><que>1. What are the two main types of digital images?</que></mark>
+      <ans>
+          <p>Digital images can be broadly classified into two types:</p>
+          <ul>
+              <li><b>Raster Images or Bitmap Images</b></li>
+              <li><b>Vector Images</b></li>
+          </ul>
+      </ans>
+  
+      <mark><que>2. What are Raster Images or Bitmap Images?</que></mark>
+      <ans>
+          <p>A <b>raster image</b> or <b>bitmap image</b> is a digital image made up of small squares called <b>pixels</b>, each containing color and brightness information. Raster images are commonly used for photographs and detailed images.</p>
+      </ans>
+  
+      <mark><que>3. How does resolution affect raster images?</que></mark>
+      <ans>
+          <p>The resolution of a raster image, measured in <b>dots per inch (dpi)</b> or <b>pixels per inch (ppi)</b>, determines its quality. Higher resolution results in a clearer image, but raster graphics are resolution-dependent. Enlarging a raster image can cause pixelation, making the image appear blurry.</p>
+      </ans>
+  
+      <mark><que>4. What are the common file formats for raster images?</que></mark>
+      <ans>
+          <p>Raster images come in various file formats, each with specific uses:</p>
+          <ul>
+              <li><b>JPEG (JPG):</b> Used for photographs due to its lossy compression.</li>
+              <li><b>PNG:</b> Supports transparency and is commonly used for web graphics.</li>
+              <li><b>GIF:</b> Used for simple animations but has a limited color palette.</li>
+              <li><b>BMP:</b> A high-quality, uncompressed image format.</li>
+              <li><b>TIFF:</b> Used in professional printing due to its high quality.</li>
+          </ul>
+      </ans>
+  
+      <mark><que>5. What are Vector Images?</que></mark>
+      <ans>
+          <p>A <b>vector image</b> is composed of mathematically defined shapes such as lines and curves, rather than pixels. These shapes have attributes like line thickness, length, and color.</p>
+      </ans>
+  
+      <mark><que>6. How do vector images differ from raster images?</que></mark>
+      <ans>
+          <p>Vector images are <b>scalable</b>, meaning they can be resized without losing quality. Unlike raster images, which become pixelated when enlarged, vector images maintain sharpness at any size.</p>
+      </ans>
+  
+      <mark><que>7. What are the common file formats for vector images?</que></mark>
+      <ans>
+          <p>Vector images are stored in various formats designed for different purposes:</p>
+          <ul>
+              <li><b>SVG (Scalable Vector Graphics):</b> Used for web graphics due to its small file size and scalability.</li>
+              <li><b>AI (Adobe Illustrator):</b> A standard format for professional graphic design.</li>
+              <li><b>EPS (Encapsulated PostScript):</b> Commonly used in print and publishing.</li>
+              <li><b>PDF (Portable Document Format):</b> Can store both vector and raster elements.</li>
+          </ul>
+      </ans>
+  
+      <mark><que>8. What are the advantages of vector images?</que></mark>
+      <ans>
+          <p>Vector images have several advantages:</p>
+          <ul>
+              <li>They are <b>scalable</b> and maintain high quality at any size.</li>
+              <li>They have <b>smaller file sizes</b> compared to high-resolution raster images.</li>
+              <li>They allow for easy <b>editing and modification</b> without losing quality.</li>
+          </ul>
+      </ans>
+  
+      <mark><que>9. What are the limitations of vector images?</que></mark>
+      <ans>
+          <p>Despite their advantages, vector images are not suitable for all purposes:</p>
+          <ul>
+              <li>They are <b>not ideal</b> for complex and highly detailed images such as photographs.</li>
+              <li>Some effects, like gradients and textures, may be difficult to achieve compared to raster images.</li>
+          </ul>
+      </ans>
+  
+      <mark><que>10. Where are vector images commonly used?</que></mark>
+      <ans>
+          <p>Vector images are commonly used in:</p>
+          <ul>
+              <li><b>Branding:</b> Logos and corporate identity design.</li>
+              <li><b>Advertisements:</b> Posters and banners.</li>
+              <li><b>Technical Drawings:</b> Engineering and architectural designs.</li>
+              <li><b>Animations:</b> Scalable character and motion graphics.</li>
+          </ul>
+      </ans>
+
+
       <strong><u>Run-length coding (Lossless compression algorithm)</u></strong>
       <br>
       Run-length coding (RLC) exploits the repetitive nature of the image. It tries to identify the length of the pixel values and encodes the images in the form of a run. Each row of the image is written as a sequence. Then the length is represented as a run of black or white pixels. This is an effective way of compressing an image. If necessary, there can be farther compression using variable length coding to code the ran length themselves. The technique scans the image row by row and identifies the ran . The output ran length vector specifies the pixel value and the length of the run. <br>
