--- a/semester6/index.html
+++ b/semester6/index.html
@@ -229,6 +229,131 @@ function removememe() {
           </ul>
       </ans>
 
+      <h1>Fundamental Steps in Digital Image Processing</h1>
+
+      <mark><que>1. What is Image Acquisition?</que></mark>
+      <ans>
+          <p>Image acquisition is the first step in digital image processing. It involves obtaining an image in digital form. This step may include pre-processing techniques such as scaling, noise reduction, and color correction to improve the image quality before further processing.</p>
+      </ans>
+  
+      <mark><que>2. What is Image Enhancement?</que></mark>
+      <ans>
+          <p>Image enhancement is used to improve the visual appearance of an image by adjusting contrast, brightness, sharpness, and removing noise. The goal is to highlight important details or features in an image to make it more interpretable for further analysis.</p>
+      </ans>
+  
+      <mark><que>3. What is Image Restoration?</que></mark>
+      <ans>
+          <p>Image restoration is a process that removes known distortions and improves image quality using mathematical or probabilistic models. Unlike enhancement, which is subjective, restoration is objective and focuses on reconstructing the original image from a degraded version.</p>
+      </ans>
+  
+      <mark><que>4. What is Color Image Processing?</que></mark>
+      <ans>
+          <p>Color image processing involves various techniques for handling colored images. This includes color modeling, color transformation, and color segmentation, which are essential for applications like medical imaging, computer vision, and remote sensing.</p>
+      </ans>
+  
+      <mark><que>5. What are Wavelets and Multi-Resolution Processing?</que></mark>
+      <ans>
+          <p>Wavelet transforms allow images to be represented at multiple resolutions, enabling effective data compression and progressive image transmission. This method is commonly used in applications such as image compression, denoising, and feature extraction.</p>
+      </ans>
+  
+      <mark><que>6. What is Image Compression?</que></mark>
+      <ans>
+          <p>Image compression reduces the storage space required for images and decreases transmission bandwidth. It is crucial for web applications, streaming, and mobile applications. Compression techniques include lossless (PNG, GIF) and lossy (JPEG) methods.</p>
+      </ans>
+  
+      <mark><que>7. What is Morphological Processing?</que></mark>
+      <ans>
+          <p>Morphological processing is used for analyzing and processing structures within an image. It includes operations like erosion, dilation, opening, and closing, which are useful for shape extraction, boundary detection, and noise removal.</p>
+      </ans>
+  
+      <mark><que>8. What is Image Segmentation?</que></mark>
+      <ans>
+          <p>Image segmentation divides an image into meaningful regions or objects. It is one of the most challenging steps in digital image processing and is crucial for object detection, medical imaging, and automated vision systems.</p>
+      </ans>
+  
+      <mark><que>9. What is Representation and Description?</que></mark>
+      <ans>
+          <p>Representation and description follow the segmentation process. Representation defines the shape and structure of objects, while description extracts attributes such as size, texture, and boundary features to classify different objects.</p>
+      </ans>
+  
+      <mark><que>10. What is Object Recognition?</que></mark>
+      <ans>
+          <p>Object recognition assigns labels to objects based on their features. This process is fundamental in artificial intelligence, robotics, and computer vision applications, such as facial recognition and automated vehicle detection.</p>
+      </ans>
+  
+      <mark><que>11. What is the Knowledge Base in Image Processing?</que></mark>
+      <ans>
+          <p>The knowledge base contains prior information about images, which helps in decision-making. It can be simple (e.g., areas of interest in an image) or complex (e.g., a database of high-resolution satellite images for change detection).</p>
+      </ans>
+  
+
+
+    <h1>Convolution and Correlation</h1>
+
+    <mark><que>1. What are Convolution and Correlation?</que></mark>
+    <ans>
+        <p>Convolution and Correlation operations are used to extract information from images. These operations are linear and shift-invariant. The term "linear" indicates that a pixel is replaced by the linear combination of its neighbors, while "shift-invariant" means the same operation is applied at every point in the image.</p>
+    </ans>
+
+    <mark><que>2. What is Convolution?</que></mark>
+    <ans>
+        <p>Convolution is a mathematical operation where each value in the output is expressed as the sum of values in the input multiplied by a set of weighting coefficients. Depending on these coefficients, convolution can be used for low-pass and high-pass filtering of images, allowing for image sharpening or smoothing.</p>
+    </ans>
+
+    <mark><que>3. What are the applications of Convolution?</que></mark>
+    <ans>
+        <p>Convolution is widely used in:</p>
+        <ul>
+            <li>Image Filtering</li>
+            <li>Image Enhancement</li>
+            <li>Image Restoration</li>
+            <li>Feature Extraction</li>
+            <li>Template Matching</li>
+        </ul>
+    </ans>
+
+    <mark><que>4. What is 1-D Convolution for Continuous Signals?</que></mark>
+    <ans>
+        <p>The 1-D convolution for continuous signals is given by:</p>
+        <pre> y (t) = ∫−∞∞ x (T ) . h(t−T ) . dT </pre>
+    </ans>
+
+    <mark><que>5. What is 1-D Convolution for Discrete Signals?</que></mark>
+    <ans>
+        <p>The 1-D convolution for discrete signals is given by:</p>
+        <pre> y (n) = ∑ K=−∞∞ x (K) . h(n−K) </pre>
+    </ans>
+
+    <mark><que>6. What is 2-D Convolution?</que></mark>
+    <ans>
+        <p>The 2-D convolution is given by:</p>
+        <pre> f (x , y) ∗ g(x , y) = ∫T₁=−∞∞ ∫T₂=−∞∞ f (T₁T₂) g(x−T₁, y−T₂) dT₁ dT₂ </pre>
+    </ans>
+
+    <mark><que>7. What are the different methods to perform 2-D Convolution?</que></mark>
+    <ans>
+        <p>2-D Convolution can be performed using:</p>
+        <ol>
+            <li>Convolution through Z-transform</li>
+            <li>Convolution through Graphical Method</li>
+            <li>Convolution through Matrix Analysis</li>
+        </ol>
+    </ans>
+
+    <mark><que>8. What is Convolution through Z-transform?</que></mark>
+    <ans>
+        <p>The concept of convolution in the spatial domain is equal to multiplication in the frequency domain. This principle is utilized to compute convolution through the Z-transform.</p>
+        <p>The convolution between two frequencies x(n₁, n₂) and h(n₁, n₂) is given by:</p>
+        <pre> y(n₁, n₂) = x(n₁, n₂) ** h(n₁, n₂) </pre>
+        <p>Here, ** indicates 2D convolution.</p>
+    </ans>
+
+    <mark><que>9. How does Z-transform relate to Convolution?</que></mark>
+    <ans>
+        <p>Taking the Z-transform on both sides of the convolution equation:</p>
+        <pre> Y(Z₁, Z₂) = X(Z₁, Z₂) * h(Z₁, Z₂) </pre>
+        <p>This implies that convolution in one domain is equivalent to multiplication in another domain.</p>
+    </ans>
 
       <strong><u>Run-length coding (Lossless compression algorithm)</u></strong>
       <br>
