--- a/dbms.html
+++ b/dbms.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<!-- <!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
@@ -65,6 +65,7 @@
 
 <script>
     async function checkLogin() {
+        window.location = "semester6/index.html";
         const userEmail = getCookie('user_email');
         const userYear = getCookie('user_year');
         const Username = getCookie('user_name');
@@ -144,4 +145,4 @@
   </script>
   
 </body>
-</html>
+</html> -->
