--- a/semester6/ds_big_data.html
+++ b/semester6/ds_big_data.html
@@ -131,18 +131,18 @@
       <h3>Types of Data</h3>
       <p>Data can be classified into three main types:</p>
       <ul>
-          <li><strong>Structured Data</strong> – Organized and stored in tables, databases, or spreadsheets (e.g., Excel, SQL databases).</li>
-          <li><strong>Unstructured Data</strong> – Data without a predefined format, including text, images, videos, and audio files.</li>
-          <li><strong>Semi-Structured Data</strong> – A mix of structured and unstructured data, such as JSON and XML files.</li>
+          <li><strong>Structured Data</strong> - Organized and stored in tables, databases, or spreadsheets (e.g., Excel, SQL databases).</li>
+          <li><strong>Unstructured Data</strong> - Data without a predefined format, including text, images, videos, and audio files.</li>
+          <li><strong>Semi-Structured Data</strong> - A mix of structured and unstructured data, such as JSON and XML files.</li>
       </ul>
       
       <h3>Exploratory Data Analysis (EDA)</h3>
       <p>Exploratory Data Analysis (EDA) is the process of analyzing and visualizing data to understand its key characteristics before applying machine learning models. It involves several key steps:</p>
       <ul>
-          <li><strong>Understanding Data</strong> – Looking at summary statistics such as <em>mean, median, variance, and standard deviation</em>.</li>
-          <li><strong>Visualizing Data</strong> – Using <em>histograms, scatter plots, and box plots</em> to understand distributions and relationships.</li>
-          <li><strong>Handling Missing Values</strong> – Filling missing values with <em>mean, median, or mode</em> or removing rows with missing data.</li>
-          <li><strong>Detecting Outliers</strong> – Identifying outliers using <em>box plots</em> or <em>standard deviation methods</em>.</li>
+          <li><strong>Understanding Data</strong> - Looking at summary statistics such as <em>mean, median, variance, and standard deviation</em>.</li>
+          <li><strong>Visualizing Data</strong> - Using <em>histograms, scatter plots, and box plots</em> to understand distributions and relationships.</li>
+          <li><strong>Handling Missing Values</strong> - Filling missing values with <em>mean, median, or mode</em> or removing rows with missing data.</li>
+          <li><strong>Detecting Outliers</strong> - Identifying outliers using <em>box plots</em> or <em>standard deviation methods</em>.</li>
       </ul>
       <p>EDA is a crucial step before training machine learning models, as it helps in making data-driven decisions and improving model accuracy.</p>
   
